--- a/_posts/2023-07-31-tse262728.markdown
+++ b/_posts/2023-07-31-tse262728.markdown
@@ -29,7 +29,10 @@ Our mission is to publish a stunning photo book <strong>each year—2026, 2027, 
 
 <p><iframe src="https://www.youtube.com/embed/XG1TmhQZuNw" frameborder="0" allowfullscreen></iframe></p>
 
-In omni enim arte vel studio vel quavis scientia vel in ipsa virtute optimum quidque rarissimum est.
+<h3>Organisation and Progression</h3>
+Read our extensive documentation, and the goal of this project.
+
+If you want more information, you can contact me or read it in our briefing on our website. Everything is listed there. We are grateful for every support.
 
 > Once every solar eclipse, you should be able to see me smile! 
 >
